# ZillaRCE

./: .gitignore  BUILD  MODULE.bazel  README.md  go.mod  go.sum
cmd/api/: BUILD  main.go
cmd/worker/: main.go
internal/sandbox/: BUILD.bazel  docker.go
src/common/: BUILD  logger.cpp  logger.h
src/worker/: BUILD  docker_worker.cpp  docker_worker.h  main.cpp
