module(
    name = "zilla_rce",
    version = "0.1"
)

bazel_dep(name = "rules_cc", version = "0.0.9")

# JSON library (essential for Docker API)
bazel_dep(name = "nlohmann_json", version = "3.11.3")

# (Google's C++ library) for better strings/logging
bazel_dep(name = "abseil-cpp", version = "20240116.1")